test/should-fail/缺少endif.j
function test takes nothing returns nothing
    if true then
endfunction